# controllers/menuController.js
@@ -43,7 +43,6 @@ const getMenuByName = async (req, res) => {
 const createMenuTemplate = async (req, res) => {
   //#swagger.tags = ['Menus']
   //#swagger.summary = 'Creates an empty menu template.'
-  //#swagger.parameters['menuName'] = { description: 'The name of the menu to create.' }
   try {
     const result = await menuModel.createMenuTemplate(req.body.menuName);
     res.setHeader('Content-Type', 'application/json');
